Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-7250

[C++] Undefined symbols for StringToFloatConverter::Impl with clang 4.x

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.15.1
    • 0.16.0
    • C++

    Description

      Undefined symbols for architecture x86_64:
        "arrow::internal::StringToFloatConverter::Impl::main_junk_value_", referenced from:
            arrow::internal::StringToFloatConverter::StringToFloat(char const*, unsigned long, float*) in libarrow.a(parsing.cc.o)
            arrow::internal::StringToFloatConverter::StringToFloat(char const*, unsigned long, double*) in libarrow.a(parsing.cc.o)
        "arrow::internal::StringToFloatConverter::Impl::fallback_junk_value_", referenced from:
            arrow::internal::StringToFloatConverter::StringToFloat(char const*, unsigned long, float*) in libarrow.a(parsing.cc.o)
            arrow::internal::StringToFloatConverter::StringToFloat(char const*, unsigned long, double*) in libarrow.a(parsing.cc.o)
      ld: symbol(s) not found for architecture x86_64

      Attachments

        Issue Links

          Activity

            People

              uwe Uwe Korn
              uwe Uwe Korn
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m