ARROW-7250: [C++] Define constexpr symbols explicitly in StringToFloatConverter::Impl